HPSchool/PHP/FPMService.yaml
apiVersion: v1
kind: Service
metadata:
  name: hpcode-fpm
  labels:
    tier: backend
spec:
  selector:
    app.kubernetes.io/instance: hpschool-fpm
    app.kubernetes.io/name: nginx-php
  ports:
    - protocol: TCP
      port: 9000
